feat: add open graph metadata & favicon

--- a/src/index.html
+++ b/src/index.html
@@ -6,19 +6,32 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 
 		<meta name="description" content="An extensive catalogue of peoples supporting the Palestinian Cause from countries all around the globe.">
-		<!-- don't switch to "light dark" content?-->
 		<meta name="theme-color" content="dark"/>
 		<meta name="author" content="Engineering Morality">
 
+		<meta property="og:title" content="Catalogue of Peoples"/>
+		<meta property="og:description" content="Graphical illustration of the record global demonstrations and public support for the Palestinian Cause"/>
+		<meta property="og:type" content="website"/>
+		<meta property="og:image" content="https://raw.githubusercontent.com/engineeringmorality/catalogue-of-peoples/master/src/assets/screenshot.png"/>
+		<meta property="og:image:alt" content="Our rotating earth glowing with data from Palestine supporting events"/>
+
+		<meta name="twitter:title" content="Catalogue of Peoples" />
+		<meta name="twitter:description" content="Graphical illustration of the record global demonstrations and public support for the Palestinian Cause" />
+		<meta name="twitter:image" content="https://raw.githubusercontent.com/engineeringmorality/catalogue-of-peoples/master/src/assets/screenshot.png" />
+		<meta name="twitter:image:alt" content="Our rotating earth glowing with data from Palestine supporting events" />
+		<!-- <meta name="twitter:site" content="" /> -->
+		<!-- <meta name="twitter:creator" content="" /> -->
+
 		<title>Catalogue of Peoples</title>
+		<link rel="icon" type="image/png" href="assets/favicon.png">
+
 		<style> body { margin: 0; } </style>
 	</head>
 
 	<body>
-		<div id="globeViz"> </div>
+		<div id="globe"> </div>
 		<!-- <div id="controls"></div> -->
 	</body>
 
 	<script src="./globe.js" type="module"> </script>
-	<!-- <script src="./globe-poc.js" type="module"> </script> -->
 </html>
