fix: deploy url config
See: https://parceljs.org/features/targets/#publicurl

Closes: #7

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
 		<meta property="og:title" content="Catalogue of Peoples"/>
 		<meta property="og:description" content="Graphical illustration of the record global demonstrations and public support for the Palestinian Cause"/>
 		<meta property="og:type" content="website"/>
+		<!-- TODO: change to relative? -->
 		<meta property="og:image" content="https://raw.githubusercontent.com/engineeringmorality/catalogue-of-peoples/master/src/assets/screenshot.png"/>
 		<meta property="og:image:alt" content="Our rotating earth glowing with data from Palestine supporting events"/>
 
