feat: play (support) video on hover

--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,7 @@
 		<link rel="icon" type="image/png" href="assets/favicon.png">
 
 		<style> body { margin: 0; } </style>
+		<link rel="stylesheet" href="../node_modules/lite-youtube-embed/src/lite-yt-embed.css" />
 	</head>
 
 	<body>
@@ -35,4 +36,5 @@
 	</body>
 
 	<script src="./globe.js" type="module"> </script>
+	<script src="../node_modules/lite-youtube-embed/src/lite-yt-embed.js"></script>
 </html>
