fix: move js tag inside body

--- a/src/index.html
+++ b/src/index.html
@@ -33,8 +33,8 @@
 	<body>
 		<div id="globe"> </div>
 		<!-- <div id="controls"></div> -->
-	</body>
 
-	<script src="./globe.js" type="module"> </script>
-	<script src="../node_modules/lite-youtube-embed/src/lite-yt-embed.js"></script>
+		<script src="./globe.js" type="module"> </script>
+		<script src="../node_modules/lite-youtube-embed/src/lite-yt-embed.js" type="module"></script>
+	</body>
 </html>
